Bug 314641 - Unable to Register a new account on a jabber server
Summary: Unable to Register a new account on a jabber server
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR major
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-08 02:21 UTC by Brian Madonna
Modified: 2013-06-09 13:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brian Madonna 2013-02-08 02:21:06 UTC
I'm unable to register a new account on a jabber server though kopete.  I click regist er and type my info in and click finish and the dialog boxes clsoes and nothing happens.  

Reproducible: Always

Steps to Reproduce:
1.Go into kopeter and click add account
2.click register
3.put a username password and server info and click finsh and try it.
Actual Results:  
I get a constant popup asking for my password for the jabber account I tried to create and it don't accept the password I specified.  

Expected Results:  
A working jabber account.
Comment 1 Roman 2013-03-08 14:53:52 UTC
Are you sure server you're registering at supports in-band registration? I just tried on my ejabberd and latest Kopete from svn - everything works just fine.
Comment 2 Pali Rohár 2013-06-09 13:05:53 UTC
Git commit 3d333844bde978ef38baf002c76e23e9123ed658 by Pali Rohár.
Committed on 09/06/2013 at 13:18.
Pushed by pali into branch 'master'.

Do not start XMPP::JT_Session when not authentificating with jabber server (e.g. when registring new jabber account)

M  +3    -1    protocols/jabber/jabberclient.cpp

http://commits.kde.org/kopete/3d333844bde978ef38baf002c76e23e9123ed658
Comment 3 Pali Rohár 2013-06-09 13:05:53 UTC
Git commit 1b16f421cec9285adcda42811ddcbca9a5fdcbb2 by Pali Rohár.
Committed on 09/06/2013 at 13:24.
Pushed by pali into branch 'master'.

Add support for disable overriding jabber host & port when registring new jabber account

This is needed for all modern jabber servers, so override option is disabled by default
After this patch registring new jabber accounts should work again

M  +187  -208  protocols/jabber/ui/dlgjabberregisteraccount.ui
M  +35   -16   protocols/jabber/ui/jabberregisteraccount.cpp
M  +1    -0    protocols/jabber/ui/jabberregisteraccount.h

http://commits.kde.org/kopete/1b16f421cec9285adcda42811ddcbca9a5fdcbb2