Add support for disable overriding jabber host & port when registring new jabber account

This is needed for all modern jabber servers, so override option is disabled by default
After this patch registring new jabber accounts should work again

BUG: 314641